testsuite/tests/typecheck/should_fail/T18127a.stderr

T18127a.hs:5:5: error:
    • Cannot instantiate unification variable ‘a1’
      with a type involving polytypes: (forall a. a) -> ()
        GHC doesn't yet support impredicative polymorphism
    • In the expression: undefined
      In an equation for ‘a’: a = undefined

T18127a.hs:8:5: error:
    • Cannot instantiate unification variable ‘a3’
      with a type involving polytypes: (Show a => a) -> ()
        GHC doesn't yet support impredicative polymorphism
    • In the expression: undefined
      In an equation for ‘b’: b = undefined
    • Relevant bindings include
        b :: (Show a => a) -> () (bound at T18127a.hs:8:1)

T18127a.hs:12:5: error:
    • Cannot instantiate unification variable ‘a0’
      with a type involving polytypes: C -> ()
        GHC doesn't yet support impredicative polymorphism
    • In the expression: undefined
      In an equation for ‘c’: c = undefined

T18127a.hs:16:5: error:
    • Cannot instantiate unification variable ‘a2’
      with a type involving polytypes: D a -> ()
        GHC doesn't yet support impredicative polymorphism
    • In the expression: undefined
      In an equation for ‘d’: d = undefined
    • Relevant bindings include
        d :: D a -> () (bound at T18127a.hs:16:1)
